<resources>

    <string name="app_name">XYZ Reader</string>
    <string name="welcome_xyz_reader">Welcome to XYZ Reader!</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="up">Up</string>
    <string name="article_image">article_image</string>
    <string name="thumbnail">Thumbnail</string>

    <string name="article_byline">Article Byline</string>
    <string name="article_body">Article Body</string>

    <string name="transition_photo">photo_transition</string>
    <string name="transition_title">title_transition</string>

    <string name="article_title">Article Title</string>
    <string name="article_subtitle">Article Subtitle</string>
</resources>
