<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:clickable="true"
    android:focusable="true"
    card_view:cardCornerRadius="5dp"
    app:elevation="@dimen/cardview_elevation"
    android:foreground="?selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--suppress AndroidLintContentDescription -->
            <com.example.xyzreader.ui.TwoThirdScale
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/background"
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_photo" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background" />

            <TextView
                android:id="@+id/article_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:maxLines="4"
                android:paddingBottom="4dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:transitionName="@string/transition_title"
                tools:text="@string/article_title" />

        </FrameLayout>

        <TextView
            android:id="@+id/article_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_primary_dark"
            android:paddingTop="6dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingBottom="10dp"
            android:maxLines="2"
            android:textSize="14sp"
            tools:text="@string/article_subtitle"/>

    </LinearLayout>

</android.support.v7.widget.CardView>